resdir = $(datadir)/woohaa
res_DATA = bg.png busy.png default-thumb.png arrow-next.svg arrow-prev.svg arrow-up.svg arrow-down.svg play.svg selected.svg spinner.svg header.svg

EXTRA_DIST = bg.png busy.png default-thumb.png arrow-next.svg arrow-prev.svg arrow-up.svg arrow-down.svg play.svg selected.svg spinner.svg header.svg
