dist_album_DATA = \
	Amy_Winehouse_-_Back_To_Black.jpg \
	Jay_Z_-_American_Gangster.jpg \
	Kanye_West_-_Graduation.jpg \
	Lupe_Fiasco_-_Food_and_Liquor.jpg \
	Red_Hot_Chilli_Peppers_-_Greatest_Hits.jpg \
	Santana_-_Ultimate_Santana.jpg \
	Timbaland_-_Shock_Value.jpg

albumdir = $(pkgdatadir)/albums
